# animengine

./: CMakeLists.txt  README.md  animengine.sln
animcore/: CMakeLists.txt  animcore.vcxproj  animcore.vcxproj.filters  serialization.h
animcore/containers/: array.h  singleton.h  string.h  unordered_map.h
animcore/interface/: engine_interface.cpp  engine_interface.h
animcore/math/: fixed_precision.h  hash64.h  quaternion.h  utils.h  vector3.h
animcore/memory/: default_allocator.h  pointers.h
animcore/natvis/: animcore.natvis
animcore/objectmodel/: managed_object.cpp  managed_object.h  object.cpp  object.h  object_id.cpp  object_id.h  object_manager.h  reference.h
animcore/remoteprotocol/: message.cpp  message.h  object_wrapper.h  pipe_client.cpp  pipe_client.h  pipe_server.cpp  pipe_server.h
animcore/serialization/: i_serializable.h  object_serializer.cpp  object_serializer.h  reflection.h  serialization.h
animcore/util/: assert.h  namespace.h
animeditor/: CMakeLists.txt  animeditor.vcxproj
animpublic/: CMakeLists.txt  animpublic.vcxproj  animpublic.vcxproj.filters  guid.cpp  guid.h  i_array_interface.h  namespace.h  opaque_handle.h  types.h
animpublic/commands/: core_commands.h  editor_commands.h
animpublic/interfaces/: i_engine_interface.h
animruntime/: animruntime.vcxproj
animtest/: CMakeLists.txt  animtest.vcxproj  animtest.vcxproj.filters  core_commands_integration.cpp  core_commands_integration.h  main.cpp
